# LabusWorkus

./: CMakeLists.txt  main.c
libs/algoritms/: CMakeLists.txt  algoritms.c  algoritms.h
libs/algoritms/array/: array.c  array.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/matrix/matrix_tasks/: takes.c  takes.h
libs/data_structures/string/: string_.c  string_.h
libs/data_structures/string/tasks/: tasks_string.h
